test/pass/return0.min
program start
    if 1 = 1 then return 0 fi
end
