test/fail/invalid_repeat.min
program start
if 0 = 0 then
    repeat
fi
end
